# Datalog-Interpreter-with-Relations

./: CMakeLists.txt  Database.h  Graph.h  Interpreter.h  Node.h  README.md  Relation.h  SCC.h  Scheme.h  Tuple.h  ans81.txt  justincase  main.cpp  parser.h  scanner.h  test.txt  token.h
